--- a/Source/Engine/Core/Core.vcxproj
+++ b/Source/Engine/Core/Core.vcxproj
@@ -154,8 +154,11 @@
     <ClInclude Include="Color.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="FileIO.h" />
+    <ClInclude Include="Json.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MathUtils.h" />
+    <ClInclude Include="Math\Matrix2X2.h" />
+    <ClInclude Include="Matrix3X3.h" />
     <ClInclude Include="Memorey.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="Time.h" />
@@ -165,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileIO.cpp" />
+    <ClCompile Include="Json.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Memory.cpp" />
     <ClCompile Include="Time.cpp" />
