--- a/Source/Engine/Core/Core.vcxproj.filters
+++ b/Source/Engine/Core/Core.vcxproj.filters
@@ -37,6 +37,15 @@
     <ClInclude Include="Vector3.h">
       <Filter>Math</Filter>
     </ClInclude>
+    <ClInclude Include="Math\Matrix2X2.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix3X3.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Json.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileIO.cpp">
@@ -52,6 +61,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Logger.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Json.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
